--- a/project/index.html
+++ b/project/index.html
@@ -12,7 +12,7 @@
       <h1>Markdown Slide Generator</h1>
       <p>
         <a href="https://github.com/Jrx2003/md2slides" target="_blank">GitHub</a> | 
-        <a href="https://youtu.be/jkHKmzajBRE" target="_blank">Video</a> | 
+        <a href="https://youtu.be/hn3GUFsApkQ" target="_blank">Video</a> | 
         <a href="https://revealjs.com/" target="_blank">Reveal.js</a> | 
         <a href="https://latex-beamer.com/" target="_blank">LaTex Beamer</a>
       </p>
